--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,62 +1,76 @@
+
+
 .container {
     display: flex;
-    flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: space-around; /* Space items evenly between the flex container */
-    align-items: center; /* Center items vertically */
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.lion_image {
-    width: 100%; /* Change to fluid width */
-    max-width: 300px; /* Limit max-width */
-    height: auto; /* Automatically adjust height to maintain aspect ratio */
+.lion_image,
+.Tiger-image,
+.Rhion-image {
+    width: 160px;
+    max-width: 300px;
+    height: 180px;
     margin-top: 15px;
     border-radius: 3px;
-    padding: 0 20px; /* Adjust padding */
+    padding: 0 20px;
+    border-radius: 40%;
 }
-
+.manage_paragraph{
+    flex: 1;
+    padding-left: 150px;
+    padding-right: 150px;
+    text-align: adjust;
+    color: #000;
+    text-decoration: solid;
+    margin-top: 80px;
+    justify-content: space-around;
+    
+}
 .theme {
     flex: 1;
-    padding: 0 20px 15px; /* Adjust padding */
-    text-align: center; /* Center align text */
-    font-size: 2rem; /* Adjust font size */
+    padding: 0 20px 15px;
+    text-align: center;
+    font-size: 2rem;
     color: #000;
 }
 
 .model {
-    text-align: center; /* Center align text */
-    font-size: 1rem; /* Adjust font size */
+    text-align: center;
+    font-size: 1rem;
     color: #58c74e;
 }
 
 .feature {
     text-align: center;
-    font-size: 1.3rem; /* Adjust font size */
-    color: #666;
-    margin-top: 20px; /* Adjust margin */
-    margin-bottom: 10px;
+    font-size: 1.3rem;
+    color: #2e2d2d;
+    margin-top: 130px;
 }
 
 .purpose {
-    font-size: 1rem; /* Adjust font size */
+    font-size: 1rem;
     color: #000;
     line-height: 1.5;
     text-align: center;
 }
 
-/* Media queries for responsiveness */
+
 @media screen and (min-width: 768px) {
     .container {
-        flex-direction: row; /* Horizontal layout for larger screens */
+        flex-direction: row;
     }
 
     .lion_image {
-        margin-left: auto; /* Push image to the right */
-        margin-right: 20px; /* Add margin to the right */
+        margin-left: auto;
+        margin-right: 20px;
     }
 
     .theme,
     .model {
-        text-align: left; /* Align text to the left for larger screens */
-        padding: 0 20px; /* Add padding to the left and right */
+        text-align: left;
+        padding: 0 20px;
     }
 }
