--- a/src/AudioVideo/Appstyle.css
+++ b/src/AudioVideo/Appstyle.css
@@ -1,4 +1,5 @@
-h1, h2, .button-flex, .video-controls, .video-player, .upload-image, .audio-controls, .audio-player {
+h1, h2, .button-flex, .video-controls, .video-player, .upload-image, .audio-controls,
+ .audio-player {
     text-align: center;
 }
 button {
@@ -10,6 +11,7 @@ button {
     margin-right: 10px; 
     margin-bottom: 10px;
     padding: 8px 16px;
+    margin-top: 10px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -21,4 +23,5 @@ button {
 .audio-player {
     margin-top: 20px;
     margin-bottom: 20px; 
+    margin-left: 290px;
 }
