--- a/src/AudioVideo/Appstyle.css
+++ b/src/AudioVideo/Appstyle.css
@@ -4,7 +4,7 @@ h1, h2, .button-flex, .video-controls, .video-player, .upload-image, .audio-cont
 }
 button {
     background-color: #007bff; 
-    color: #fff;
+    color: #ffffff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -12,6 +12,10 @@ button {
     margin-bottom: 10px;
     padding: 8px 16px;
     margin-top: 10px;
+}
+.display-item{
+    margin-top: 5px;
+    margin-bottom: 2px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -23,5 +27,20 @@ button {
 .audio-player {
     margin-top: 20px;
     margin-bottom: 20px; 
-    margin-left: 290px;
+}
+
+
+.video-player {
+    text-align: center;
+    margin-top: 20px; 
+}
+.audio-player,
+.video-player,
+.recorded-player {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.download-link{
+    color: red;
 }
