--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -19,16 +19,11 @@
     border-radius: 40%;
     margin-right: 20px;
 }
-.manage_paragraph{
-    flex: 1;
-    padding-left: 150px;
-    padding-right: 150px;
-    text-align: adjust;
+.manage_paragraph {
+    padding: 0 20px; 
+    text-align: justify; 
     color: #000;
-    text-decoration: solid;
-    margin-top: 80px;
-    justify-content: space-around;
-    
+    margin-top: 40px; 
 }
 .theme {
     flex: 1;
@@ -41,14 +36,14 @@
 .model {
     text-align: center;
     font-size: 1rem;
-    color: #58c74e;
+    color: #4cd840;
 }
 
 .feature {
     text-align: center;
-    font-size: 1.3rem;
-    color: #2e2d2d;
-    margin-top: 130px;
+    font-size: 1.6rem;
+    color: #434747;
+    margin-top: 100px;
 }
 
 .purpose {
@@ -74,4 +69,8 @@
         text-align: left;
         padding: 0 20px;
     }
+    .manage_paragraph {
+        padding: 0 150px; 
+        margin-top: 80px; 
+      }
 }
