--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+/* Navbar.css */
+
 body {
   background-color: antiquewhite;
   margin: 0;
@@ -6,34 +8,21 @@ body {
 nav {
   height: 70px;
   display: flex;
+  align-items: center;
   padding: 10px;
   box-shadow: 0px 2.98256px 7.4564px rgba(7, 7, 7, 0.1);
   background-color: rgb(61, 150, 223);
   text-transform: uppercase;
-}
-.nav-link {
-  text-decoration: none;
-  color: #fc0000;
-  margin-right: 20px; 
-  transition: color 0.3s ease; 
+  position: relative; /* Add relative positioning for the menu icon */
 }
 
-.nav-link:hover {
-  color: #000000; 
-}
-
-
-.flex-container{
-  align-items: center;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-weight: bold;
+.flex-container {
   display: flex;
   margin-left: 250px;
-  text-transform: uppercase;
-  
 }
+
 a {
-  padding: 40px;
+  padding: 20px;
   font-size: 20px;
   text-align: center;
   color: #fff;
@@ -41,32 +30,76 @@ a {
   text-decoration: none;
 }
 
-.button-container {
-  align-self: center;
-  display: flex;
-  width: 25%;
-  margin-left: auto;
-  margin-right: 20px; 
+a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
-
-
-
-.body_container {
-  display: flex;
+a:hover > span {
+  color: #ffff00;
 }
 
+.menu-icon {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 33px; 
+  right: 20px; 
+}
+
+.menu-line {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  transition: all 0.3s ease;
+}
 
 @media only screen and (max-width: 768px) {
   .flex-container {
-    margin-left: 0;
-    justify-content: center;
+    display: none;
   }
 
-  .button-container {
-    width: auto;
+  .menu-icon {
+    display: flex;
   }
 
+  .navbar-menu {
+    display: none;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background-color: rgb(61, 150, 223);
+  }
+
+  .navbar-menu.active {
+    display: block;
+  }
+
+  .navbar-menu a {
+    display: block;
+    padding: 15px 0;
+    text-align: center;
+  }
+
+  .menu-line {
+    background-color: #fff;
+    &.open:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+    &.open:nth-child(2) {
+      opacity: 0;
+    }
+    &.open:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+  }
+
+  /* Adjust the menu icon position when the navbar is active */
+  .navbar-menu.active .menu-icon {
+    right: calc(100% - 40px); /* Adjust the right position to align with the right edge of the navbar */
+  }
 }
-
-  
