--- a/src/AudioVideo/Appstyle.css
+++ b/src/AudioVideo/Appstyle.css
@@ -1,8 +1,17 @@
-h1, h2, .button-flex, .video-controls, .video-player, .upload-image{
+.mid,h2, .button-flex, .video-controls, .video-player, .upload-image{
     text-align: center;
 }
-button {
-    background-color: #007bff; 
+@keyframes marquee {
+    50% { transform: translateX(0); }
+    50% { transform: translateX(-20%); }
+  }
+.content-marq{
+    display: inline-block;
+    animation: marquee 7s linear 19;
+    white-space: nowrap;
+}
+button{
+    background-color: #122bcf; 
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -11,13 +20,19 @@ button {
     margin-bottom: 10px;
     padding: 8px 16px;
     margin-top: 10px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+}
+button:hover{
+    background-color: #395bc9;
+    color: #ffffff;
 }
 .display-item{
     margin-top: 5px;
     margin-bottom: 2px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     button {
         margin-right: 5px; 
     }
