--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,76 +1,69 @@
-
-
-.container {
+.home {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+  }
+  
+  .container {
+    display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
-.lion_image,
-.Tiger-image,
-.Rhion-image {
-    width: 160px;
-    max-width: 300px;
-    height: 180px;
-    margin-top: 15px;
-    border-radius: 3px;
-    padding: 0 15px;
-    border-radius: 40%;
-    margin-right: 20px;
-}
-.manage_paragraph {
-    padding: 0 20px; 
-    text-align: justify; 
-    color: #000;
-    margin-top: 40px; 
-}
-.theme {
-    flex: 1;
-    padding: 0 20px 15px;
+    margin-bottom: 20px;
+  }
+  
+  .theme {
     text-align: center;
     font-size: 2rem;
     color: #000;
-}
-
-.model {
+  }
+  
+  .model {
     text-align: center;
     font-size: 1rem;
     color: #4cd840;
-}
-
-.feature {
+  }
+  
+  .lion_image,
+  .Tiger-image,
+  .Rhion-image {
+    width: 160px;
+    max-width: 300px;
+    height: 180px;
+    border-radius: 50%;
+    margin: 15px;
+  }
+  
+  .manage_paragraph {
+    text-align: center;
+    color: #000;
+  }
+  
+  .sentence {
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .sentence.hidden {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity 1s ease-in-out, height 1s ease-in-out;
+  }
+  
+  .feature {
     text-align: center;
     font-size: 1.6rem;
     color: #434747;
     margin-top: 100px;
-}
-
-.purpose {
+  }
+  
+  .purpose {
     font-size: 1rem;
     color: #000;
     line-height: 1.5;
     text-align: center;
-}
-
-
-@media screen and (min-width: 768px) {
-    .container {
-        flex-direction: row;
-    }
-
-    .lion_image {
-        margin-left: auto;
-        margin-right: 20px;
-    }
-
-    .theme,
-    .model {
-        text-align: left;
-        padding: 0 20px;
-    }
-    .manage_paragraph {
-        padding: 0 150px; 
-        margin-top: 80px; 
-      }
-}
+  }
+  
