--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,69 +1,101 @@
-.home {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    padding: 20px;
-  }
-  
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.lion_image,
+.Tiger-image,
+.Rhion-image {
+  width: 160px;
+  max-width: 300px;
+  height: 180px;
+  margin-top: 15px;
+  border-radius: 3px;
+  padding: 0 15px;
+  border-radius: 40%;
+  margin-right: 20px;
+}
+.manage_paragraph {
+  padding: 0 20px; 
+  text-align: justify; 
+  color: #000;
+  margin-top: 40px; 
+  box-sizing: var(--tw-content);
+
+}
+:after, :before {
+  --tw-scale-x:1;
+  --tw-scale-y:1;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-content: "";
+}
+.theme {
+  flex: 1;
+  padding: 0 20px 15px;
+  text-align: center;
+  font-size: 2rem;
+  color: #000;
+}
+
+.model {
+  text-align: center;
+  font-size: 1rem;
+  color: #4cd840;
+}
+
+.feature {
+  text-align: center;
+  font-size: 1.6rem;
+  color: #434747;
+  margin-top: 100px;
+}
+
+.purpose {
+  font-size: 1rem;
+  color: #000;
+  line-height: 1.5;
+  text-align: center;
+}
+
+
+@media screen and (min-width: 768px) {
   .container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 20px;
+      flex-direction: row;
   }
-  
-  .theme {
-    text-align: center;
-    font-size: 2rem;
-    color: #000;
+
+  .lion_image {
+      margin-left: auto;
+      margin-right: 20px;
   }
-  
+
+  .theme,
   .model {
-    text-align: center;
-    font-size: 1rem;
-    color: #4cd840;
+      text-align: left;
+      padding: 0 20px;
   }
-  
-  .lion_image,
-  .Tiger-image,
-  .Rhion-image {
-    width: 160px;
-    max-width: 300px;
-    height: 180px;
-    border-radius: 50%;
-    margin: 15px;
-  }
-  
   .manage_paragraph {
-    text-align: center;
-    color: #000;
+      padding: 0 150px; 
+      margin-top: 80px; 
+      white-space: pre-line; 
+    }
+}
+/* CSS */
+@keyframes typing {
+  from {
+    width: 0;
   }
-  
-  .sentence {
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
+  to {
+    width: 100%;
   }
-  
-  .sentence.hidden {
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
-    transition: opacity 1s ease-in-out, height 1s ease-in-out;
-  }
-  
-  .feature {
-    text-align: center;
-    font-size: 1.6rem;
-    color: #434747;
-    margin-top: 100px;
-  }
-  
-  .purpose {
-    font-size: 1rem;
-    color: #000;
-    line-height: 1.5;
-    text-align: center;
-  }
-  
+}
+
+.typewriter {
+  overflow: hidden; /* Ensures the text is hidden until the animation starts */
+  animation: typing 5s steps(40, end); /* Adjust the duration (5s) and steps based on your preference */
+  white-space: nowrap; /* Prevents the text from wrapping */
+  border-right: 2px solid #000; /* Add a border to mimic the typing cursor */
+}
+
+
